v4.0.5
Updated MySQL connecter, updated code for Java 20 and latest MySQL. Add MacM4 executables.